修改组件名称，发布到npm

--- a/packages/link/package.hbs
+++ b/packages/link/package.hbs
@@ -1,5 +1,5 @@
 {
-  "name": "lg-link",
+  "name": "lg-link-qt",
   "version": "0.0.0",
   "description": "lg-link component",
   "main": "dist/cjs/index.js",
